# entity_resolution

./: README.md
data/paper/: format.sh  match.txt  raw.txt  source.txt  source_1.txt
data/product/: format.sh  map.txt  match.txt  source.txt  source_1.txt  source_2.txt
data/restaurant/: fodors.txt  format.sh  match-pairs.txt  match.txt  source.txt  source_1.txt  source_2.txt  zagats.txt
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/test/: CMakeLists.txt  Makefile  cmake_install.cmake  dist_measure.cpp  feature.cpp  feature_backup.cpp  graph.cpp  graph_v1.cpp  paper.cpp  product.cpp  random_walk.cpp  refine.cpp  restaurant.cpp  test_feature.cpp  vec_dist_measure.cpp
src/util/: Bipartite.h  RandomWalk.h  clique.h  cluster.h  cmake_install.cmake  measure.h  util.h
