

ADD_EXECUTABLE(product product.cpp)
ADD_EXECUTABLE(paper paper.cpp)
ADD_EXECUTABLE(restaurant restaurant.cpp)

#ADD_EXECUTABLE(dist_measure dist_measure.cpp)
#TARGET_LINK_LIBRARIES(dist_measure utillib )

#ADD_EXECUTABLE(vec_dist_measure vec_dist_measure.cpp)
#TARGET_LINK_LIBRARIES(vec_dist_measure utillib )

#ADD_EXECUTABLE(feature feature.cpp)

#ADD_EXECUTABLE(graph graph.cpp)
#TARGET_LINK_LIBRARIES(graph utillib )
#ADD_EXECUTABLE(random_walk random_walk.cpp)

#ADD_EXECUTABLE(refine refine.cpp)

#ADD_EXECUTABLE(test_feature test_feature.cpp)
#TARGET_LINK_LIBRARIES(test_feature utillib )
